--- a/css/site.css
+++ b/css/site.css
@@ -27,6 +27,7 @@ h1, h2, h3, h4, h5 {
     width: 100%;
     text-align: center;
     color: #eee;
+    box-shadow: #333 0px 5px;
 }
 
     .heroArea h2 {
@@ -37,6 +38,8 @@ h1, h2, h3, h4, h5 {
         text-transform: uppercase;
         font-size: 20px;
         max-width: 500px;
+        -webkit-text-shadow: 2px 1px 0px #000, 3px 3px 0px #000;
+        text-shadow: 2px 1px 0px #000, 3px 3px 0px #000;
     }
 
 .navbar-inverse .navbar-brand {
