--- a/css/site.css
+++ b/css/site.css
@@ -63,6 +63,27 @@ h1, h2, h3, h4, h5 {
     border: solid 2px #111;
 }
 
+.panel-heading {
+    position:relative;
+}
+.project-status {
+    position: absolute;
+    border: 1px solid #ddd;
+    background-color:#f5f5f5;
+    padding: 10px;
+    left: -40px;
+    top: -7px;
+    text-align:center;
+    vertical-align:middle;
+    font-size:0.8em;
+    border-radius:50px;
+    width:75px;
+    height:75px;
+    line-height:20px;
+    padding-top:17px;
+    box-shadow: #ccc 3px 0px;
+}
+
 @media (min-width: 768px) {
     .navbar > .container .navbar-brand {
         margin-left: 70px;
