--- a/css/site.css
+++ b/css/site.css
@@ -21,15 +21,34 @@ h1, h2, h3, h4, h5 {
 }
 
 .heroArea {
+    background-image: url(/images/bg1.jpg);
     height: 200px;
-    background: linear-gradient(135deg, #666 25%, transparent 25%) -50px 0, linear-gradient(225deg, #666 25%, transparent 25%) -50px 0, linear-gradient(315deg, #666 25%, transparent 25%), linear-gradient(45deg, #666 25%, transparent 25%);
-    background-size: 100px 100px;
-    background-color: #444;
+}
+
+.heroArea div {
+    height: 200px;
+     background-image: radial-gradient(transparent 60%, rgba(255, 38, 255, .2) 60%, rgba(255, 38, 255, .2));
+     background-size: 100px 100px;
+     background-color: rgba(000,000,000,0.4);
     width: 100%;
     text-align: center;
     color: #eee;
     box-shadow: #333 0px 5px;
+    
 }
+
+    .heroArea div h2 {
+        display: inline-block;
+        margin-top: 0px;
+        padding-top: 100px;
+        font-family: 'Montserrat', sans-serif;
+        text-transform: uppercase;
+        font-size: 20px;
+        max-width: 500px;
+        -webkit-text-shadow: 2px 1px 0px #000, 3px 3px 0px #000;
+        text-shadow: 2px 1px 0px #000, 3px 3px 0px #000;
+    }
+
 
     .heroArea h2 {
         display: inline-block;
