--- a/css/site.css
+++ b/css/site.css
@@ -1,4 +1,4 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Montserrat);
+﻿@import url(http://fonts.googleapis.com/css?family=Six+Caps|Montserrat);
 
 h1, h2, h3, h4, h5 {
     font-family: 'Montserrat', sans-serif;
@@ -41,9 +41,9 @@ h1, h2, h3, h4, h5 {
         display: inline-block;
         margin-top: 0px;
         padding-top: 100px;
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Six+Caps', sans-serif;
         text-transform: uppercase;
-        font-size: 20px;
+        font-size: 23px;
         max-width: 500px;
         -webkit-text-shadow: 2px 1px 0px #000, 3px 3px 0px #000;
         text-shadow: 2px 1px 0px #000, 3px 3px 0px #000;
